--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
 <body>
   <h1>Discover hidden places in the world around you</h1>
-
+  <p><a href = "#">Download Excursion (Coming soon!)</a></p>
+  <p><video autoplay>
+    <source src="./resources/videos/excursion.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+  </video></p>
   <h2>Your personal travel guide</h2>
 
   <p>Excursion remembers places you like, and recommends new places of interest around you.</p>
