--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       Your browser does not support the video tag.
   </video></p>
   <h2>Your personal travel guide</h2>
-
+  <p><img src="./resources/images/camp.jpg" width="650" /></p>
+    <p><img src="./resources/images/phone.png" /><p>
   <p>Excursion remembers places you like, and recommends new places of interest around you.</p>
 
   <h2>Coming soon for iPhone and Android</h2>
