HTML add web-link STYLE add final styling

--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
       Your browser does not support the video tag.
   </video></p>
   <h2>Your personal travel guide</h2>
-  <p><img src="./resources/images/camp.jpg" width="650" /></p>
-    <p><img src="./resources/images/phone.png" /><p>
   <p>Excursion remembers places you like, and recommends new places of interest around you.</p>
-
+  <p><img src="./resources/images/camp.jpg" width="650" /></p>
+  <p><img src="./resources/images/phone.png" /><p>
   <h2>Coming soon for iPhone and Android</h2>
-
-  <p id="trademark">©Excursion</p>
+  <p><a href = "#"> Download Excursion (Coming soon!)</a><p>
+  <p class="footer">©Excursion</p>
 </body>
 
 </html>
